Updated unit tests